[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2025-google-capstone"
version = "0.1.0"
description = "VPC Access Broker: Policy-Gated Automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "python-dotenv",
    "google-adk",
]

[tool.setuptools]
packages = ["."]